fixed configuration to be able to run JUnit5 tests